Adds more styling to styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+body  {
+
+}
+
+.cat-aboutme {
+background-color: yellow;
+}
 
 h1  {
   font-family: sans-serif;
@@ -6,8 +13,8 @@ h1  {
 }
 
 img {
-  height: 300px;
-  width: 240px;
+  height: 240px;
+  width: 170px;
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
@@ -15,8 +22,8 @@ img {
 }
 .sidebar {
   width: 30%;
-  float: right;
-  background-color: yellow;
+  float: centre;
+  background-color: lime;
 }
 .column {
     width: 350px;
