Styles header section

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,29 @@
   color: white;
 }
 
+.nav {
+  float: left;
+  width: 22%;
+  font-size: 30px;
+  height: 520px;
+  background: #ccc;
+  font-family: Brush Script MT,cursive;
+  padding: 20px;
+  color: darkmagenta;
+}
+
+.nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav2 {
+  float: right;
+  width: 25%;
+  height: 520px;
+  background: #ccc;
+  padding: 20px;
+}
 
 @media (max-width: 600px) {
   nav, article {
